--- a/notebooks/module_0/rag_application.ipynb
+++ b/notebooks/module_0/rag_application.ipynb
@@ -13,50 +13,41 @@
    "source": [
     "![Simple RAG](../../images/simple_rag.png)\n",
     "\n",
-    "In this notebook, we're going to set up a simple RAG application that we'll be using as we learn more about LangSmith.\n",
-    "\n",
-    "RAG (Retrieval Augmented Generation) is a popular technique for providing LLMs with relevant documents that will enable them to better answer questions from users. \n",
-    "\n",
-    "In our case, we are going to index some LangSmith documentation!\n",
-    "\n",
-    "LangSmith makes it easy to trace any LLM application, no LangChain required!"
+    "- LangSmith 문서를 기반으로 응답하는 RAG 구현 테스트"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Setup"
+    "### 환경설정"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Make sure you set your environment variables, including your OpenAI API key."
+    "OpenAI API key와 LANGCHAIN API key를 프로젝트 루트에 .env 환경변수 파일 생성 후 입력하기"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# You can set them inline!\n",
-    "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
-    "os.environ[\"LANGCHAIN_API_KEY\"] = \"\"\n",
-    "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
-    "os.environ[\"LANGCHAIN_PROJECT\"] = \"langsmith-academy\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Or you can use a .env file\n",
+    "# 환경변수 로드\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv(dotenv_path=\"../../.env\", override=True)"
    ]
@@ -70,9 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n",
+      "Fetching pages: 100%|##########| 219/219 [00:07<00:00, 30.47it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "from langsmith import traceable\n",
     "from openai import OpenAI\n",
@@ -93,36 +93,36 @@
     "nest_asyncio.apply()\n",
     "retriever = get_vector_db_retriever()\n",
     "\n",
-    "\"\"\"\n",
+    "\"\"\" \n",
     "retrieve_documents\n",
-    "- Returns documents fetched from a vectorstore based on the user's question\n",
+    "- 사용자의 질문을 기반으로 벡터스토어에서 가져온 문서를 반환합니다.(* langSmith 문서 기반)\n",
     "\"\"\"\n",
     "@traceable(run_type=\"chain\")\n",
     "def retrieve_documents(question: str):\n",
     "    return retriever.invoke(question)\n",
     "\n",
     "\"\"\"\n",
-    "generate_response\n",
-    "- Calls `call_openai` to generate a model response after formatting inputs\n",
+    "generate_response  \n",
+    "- 입력을 포맷팅한 후 `call_openai`를 호출하여 모델 응답을 생성합니다.\n",
     "\"\"\"\n",
     "@traceable(run_type=\"chain\")\n",
-    "def generate_response(question: str, documents):\n",
-    "    formatted_docs = \"\\n\\n\".join(doc.page_content for doc in documents)\n",
+    "def generate_response(question: str, documents): # 질문과 검색된 문서 인자로 받음.\n",
+    "    formatted_docs = \"\\n\\n\".join(doc.page_content for doc in documents) # 검색된 문서 덩어리를 하나의 문서로 변환(포맷팅)\n",
     "    messages = [\n",
     "        {\n",
     "            \"role\": \"system\",\n",
-    "            \"content\": RAG_SYSTEM_PROMPT\n",
+    "            \"content\": RAG_SYSTEM_PROMPT # 시스템 프롬프트 입력\n",
     "        },\n",
     "        {\n",
     "            \"role\": \"user\",\n",
-    "            \"content\": f\"Context: {formatted_docs} \\n\\n Question: {question}\"\n",
+    "            \"content\": f\"Context: {formatted_docs} \\n\\n Question: {question}\" # 검색된 문서를 Context로 사용자의 질문을 Question으로 전달\n",
     "        }\n",
     "    ]\n",
-    "    return call_openai(messages)\n",
+    "    return call_openai(messages) # LLM 모델 호출 함수에 메시지 전달(시스템, 유저) 및 응답 결과 반환\n",
     "\n",
     "\"\"\"\n",
-    "call_openai\n",
-    "- Returns the chat completion output from OpenAI\n",
+    "call_openai  \n",
+    "- OpenAI의 채팅 완성 결과를 반환합니다.\n",
     "\"\"\"\n",
     "@traceable(run_type=\"llm\")\n",
     "def call_openai(\n",
@@ -136,15 +136,15 @@
     "\n",
     "\"\"\"\n",
     "langsmith_rag\n",
-    "- Calls `retrieve_documents` to fetch documents\n",
-    "- Calls `generate_response` to generate a response based on the fetched documents\n",
-    "- Returns the model response\n",
+    "1. `retrieve_documents`를 호출하여 문서를 가져옵니다.\n",
+    "2. 가져온 문서를 기반으로 `generate_response`를 호출하여 응답을 생성합니다.\n",
+    "3. 모델 응답을 반환합니다.\n",
     "\"\"\"\n",
     "@traceable(run_type=\"chain\")\n",
-    "def langsmith_rag(question: str):\n",
-    "    documents = retrieve_documents(question)\n",
-    "    response = generate_response(question, documents)\n",
-    "    return response.choices[0].message.content\n"
+    "def langsmith_rag(question: str):  # -> 사용자 질문(question)을 인자로 전달\n",
+    "    documents = retrieve_documents(question)  # 1. 질문을 기반으로 벡터스토어에서 관련 문서를 검색\n",
+    "    response = generate_response(question, documents)  # 2. 질문과 검색된 문서를 기반으로 모델 응답 생성\n",
+    "    return response.choices[0].message.content  # 3. 생성된 응답의 콘텐츠 반환\n"
    ]
   },
   {
@@ -156,11 +156,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LangSmith는 LLM 애플리케이션 개발, 모니터링 및 테스트를 위한 플랫폼입니다. 이 플랫폼은 프로토타입 제작, 디버깅 및 애플리케이션 개발 생애 주기의 각 단계에서 다양한 워크플로우를 지원합니다. 사용자는 LangSmith를 통해 모델 성능을 이해하고 문제를 해결할 수 있습니다.\n"
+     ]
+    }
+   ],
    "source": [
-    "question = \"What is LangSmith used for?\"\n",
+    "question = \"LangSmith는 무엇에 사용되나요?\"\n",
     "ai_answer = langsmith_rag(question, langsmith_extra={\"metadata\": {\"website\": \"www.google.com\"}})\n",
     "print(ai_answer)"
    ]
@@ -169,7 +177,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Let's take a look in LangSmith!"
+    "### LangSmith 결과 확인\n",
+    "\n",
+    "<img width=\"1081\" alt=\"image\" src=\"https://github.com/user-attachments/assets/30bf261f-5ec4-4d74-b359-e42f67bc64c9\" />"
    ]
   }
  ],
@@ -189,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
